--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2025.7.14
+charset-normalizer==3.4.2
 colorama==0.4.6
+idna==3.10
 prompt_toolkit==3.0.51
 python-box==7.3.2
+requests==2.32.4
+urllib3==2.5.0
 wcwidth==0.2.13
